Fixes h1 alignment on mobile.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -293,6 +293,10 @@ p > img {
   font-size: 28px;
   letter-spacing: 1px;
   text-align: left;
+
+  @include mobile {
+    text-align: center;
+  }
 }
 
 .site-description {
